--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@creativebulma/bulma-divider": "^1.1.0",
+    "@creativebulma/bulma-tooltip": "^1.2.0",
     "bulma": "^0.9.3",
     "next": "12.0.10",
     "react": "17.0.2",
