--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "dependencies": {
-        "@project-serum/anchor": "^0.22.0"
+        "@project-serum/anchor": "^0.22.0",
+        "@solendprotocol/solend-sdk": "^0.5.5"
     },
     "devDependencies": {
+        "@types/mocha": "^9.0.0",
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
-        "ts-mocha": "^8.0.0",
-        "@types/mocha": "^9.0.0",
+        "ts-mocha": "^9.0.2",
         "typescript": "^4.3.5"
     }
 }
